Latest App Update UI Changes mostly.

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -5,7 +5,7 @@
   </button>
 </ion-header>
 
-<ion-content class="separated-cards">
+<ion-content style="background: #eff0f1;" class="separated-cards">
 
   <ion-avatar class="circular-profile" style="background-image: url(http://www.fastforwardsim.com/alpha/male.png)"> </ion-avatar>
   <br>
