--- a/src/pages/universities/universities.html
+++ b/src/pages/universities/universities.html
@@ -9,7 +9,7 @@
 </ion-header>
 
 
-<ion-content>
+<ion-content style="background: #eff0f1;">
   <ion-card *ngFor="let university of universities" (click)="openUniversityProfile(university)">
     <ion-grid>
       <ion-row class="left">
