--- a/src/pages/university-profile/university-profile.html
+++ b/src/pages/university-profile/university-profile.html
@@ -4,23 +4,23 @@
 </ion-header>
 
 
-<ion-content class="card-background-page">
+<ion-content style="color:#727272; font-weight: 10; font-size:1.5rem;" class="card-background-page">
 
   <ion-card>
     <div class="layer">
       <img [src]="university.img_url" alt="university image">
-      <!-- <div class="card-title">{{university.name}}</div> -->
+       
     </div>
   </ion-card>
 
   <div class="caption-wrapper">
     <h3>{{university.name}}</h3>
-    <p>{{university.description}}</p>
+    <p style="padding-left:1rem;padding-right:1rem;text-align: center;font-style: italic;">{{university.description}}</p>
   </div>
 
-  <ion-row *ngFor="let row of rows">
-    <div class="side-title">{{row.title}}:</div>
-    <span class="value">{{row.value}}</span>
+  <ion-row style="padding-left: 5%; padding-right: 10%; font-size:1.5rem" *ngFor="let row of rows">
+    <div style="color:#F84838 padding-left:1rem;padding-right:1rem" class="side-title">{{row.title}}:</div>
+    <span style="color:black; padding-right:1rem;" class="value">{{row.value}}</span>
   </ion-row>
 <!-- 
   <ion-row class="bottom">
@@ -37,15 +37,15 @@
     </ion-col>
 
   </ion-row> -->
-  <ion-row style="padding-top:4rem">
-    <button ion-button round class="moreUniversitiesButton" color="grey" (click)="interest()">
-      <strong style="padding-right:1rem">I'm Interested </strong>
+  <ion-row style="justify-content: center;padding-top:4rem" align-items: center>
+    <button button ion-button color="primary"  style="width:100%;height:7rem;" (click)="interest()">
+      <strong style="padding-right:1rem">I'm Interested</strong>
     </button>
   </ion-row>
 
 
-  <ion-row>
-    <button ion-button round class="moreUniversitiesButton" color="grey" (click)="moreUniversities()">
+  <ion-row style="justify-content: center" >
+    <button button button ion-button color="#727272"  style="background:#727272;width:100%;height:5rem;" (click)="moreUniversities()">
       <strong style="padding-right:1rem"> More Universities </strong>
     </button>
   </ion-row>
