Anany's Latest Changes before upload

--- a/src/pages/university-profile/university-profile.html
+++ b/src/pages/university-profile/university-profile.html
@@ -15,12 +15,12 @@
 
   <div class="caption-wrapper">
     <h3>{{university.name}}</h3>
-    <p style="padding-left:1rem;padding-right:1rem;text-align: center;font-style: italic;">{{university.description}}</p>
+    <p style="padding-left:1rem;line-height:2rem;padding-right:1rem;text-align: center;font-style: italic;">{{university.description}}</p>
   </div>
 
   <ion-row style="padding-left: 5%; padding-right: 10%; font-size:1.5rem" *ngFor="let row of rows">
     <div style="color:#F84838 padding-left:1rem;padding-right:1rem" class="side-title">{{row.title}}:</div>
-    <span style="color:black; padding-right:1rem;" class="value">{{row.value}}</span>
+    <span float-right style="color:black; padding-right:1rem;" class="value">{{row.value}}</span>
   </ion-row>
 <!-- 
   <ion-row class="bottom">
